# sev-snp-launch

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/linux/: ioctl.rs  snp.rs
tests/: launch.rs
