[package]
name = "sev-snp-launch"
version = "0.1.0"
authors = ["The VirTEE Project Developers <virtee-security@redhat.com>"]
license = "Apache-2.0"
repository = "https://github.com/virtee/sev-snp-launch"
description = "Library for Linux SEV-SNP launch APIs"
readme = "README.md"
exclude = [".gitignore", ".github/*"]
edition = "2024"

[dependencies]
bitfield = "0.19.4"
bitflags = "2.10.0"
hex = "0.4.3"
iocuddle = "0.1.1"
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
libc = "0.2.178"
uuid = "1.19.0"
